samples/_failures_safe/1761310115_82affa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f1c4f40.c: In function ‘main’:
./samples/SAFE/__tmp_9f1c4f40.c:144:5: error: expected expression at end of input
  144 |     if (!read_log_file(filename, entries, &entry_count))
      |     ^~
./samples/SAFE/__tmp_9f1c4f40.c:144:5: error: expected declaration or statement at end of input
